data/all_generated_tests/raw_wast_tests/loop_InfiniteLoops_500.wast
;; 1. Design a loop that conditionally branches based on a stack value, ensuring the condition never met by incorrectly managing stack. This should cause an infinite loop if the condition is not correctly evaluated.

(assert_invalid
  (module
    (func $infinite_loop
      (i32.const 1)
      (loop (result i32)
        (br_if 0 (i32.const 0))
      )
    )
  )
  "type mismatch"
)